# Blawn

./: .CMakeLists.txt.swp  .bashrc  .clang-format  .gitignore  .gitmodules  .swp  Blawn.code-workspace  CMakeLists.txt  LICENSE  Makefile  README.md  blawn.cpp  memo.txt  queue  tree
Blawn/: Makefile  blawn  result  result.ll  result.s  t.c  test1.blawn  test1.out
Blawn/data/: builtins.ll  llc
Blawn/tmp/: result.s  test1.blawn  test1.ll
Blawn/tools/: test1.bridge
ast/: node.cpp  node.hpp
ast_generator/: ast_generator.cpp  ast_generator.hpp  node_collector.hpp
blawn_context/: blawn_context.cpp  blawn_context.hpp
builtins/: builtins.cpp  type.cpp  type.hpp
commons/: commons.hpp
compiler/ast/: node.cpp  node.hpp
compiler/ast_generator/: ast_generator.cpp  ast_generator.hpp  node_collector.hpp
compiler/blawn_context/: blawn_context.cpp  blawn_context.hpp
compiler/builtins/: builtins.c  builtins.cpp  builtins.hpp  builtins.ll
compiler/compiler/: compiler.cpp
compiler/errors/: errors.cpp  errors.hpp
compiler/global_configuration/: global_configuration.hpp
compiler/ir_generator/: ir_generator.cpp  ir_generator.hpp
compiler/parser/: Makefile  a.out  driver.cpp  (+16 more)
dev_utils/: format_cpp.py
errors/: errors.hpp
generator/: generator.hpp
global_configuration/: global_configuration.hpp
ir_generator/: ir_generator.cpp  ir_generator.hpp
parser/: Makefile  a.out  blawn  driver.cpp  driver.hpp  lex.yy.cc  lexer.ll  location.hh  main.cpp  parser.tab.cc  parser.tab.hh  parser.yy  patch.py  position.hh  result  result.ll  result.s  scanner.hpp  stack.hh
sample/: blawn  list.blawn  test1.out
src/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
src/blawn/: .CMakeLists.txt.swp  CMakeLists.txt
src/blawn/ast/: node.cpp  node.hpp
src/blawn/ast_generator/: ast_generator.cpp  ast_generator.hpp  node_collector.hpp
src/blawn/blawn_context/: blawn_context.cpp  blawn_context.hpp
src/blawn/builtins/: builtins.c  builtins.cpp  builtins.hpp
src/blawn/compiler/: compiler.cpp  compiler.hpp
src/blawn/errors/: errors.cpp  errors.hpp
src/blawn/global_configuration/: global_configuration.hpp
src/blawn/ir_generator/: ir_generator.cpp  ir_generator.hpp
src/blawn/parser/: driver.cpp  driver.hpp  lex.yy.cc  parser.yy  position.hh  scanner.hpp  stack.hh
src/blawn/utils/: utils.cpp  utils.hpp
src/compiler/: main.cpp
src/compiler/ast/: builder.cpp  builder.hpp  node.cpp  node.hpp  scoped_collector.hpp
src/compiler/ast_generator/: ast_generator.cpp  ast_generator.hpp  node_collector.hpp
src/compiler/behaviors/: has_variant_behavior.hpp  shared_from_this.hpp
src/compiler/blawn_context/: blawn_context.cpp  blawn_context.hpp
src/compiler/builtins/: builtins.cpp  builtins.hpp  builtins.ll
src/compiler/compiler/: compiler.cpp
src/compiler/compiler/installer/mac/: installer.cpp
src/compiler/converter/ast_to_mir/: converter.cpp  converter.hpp
src/compiler/errors/: errors.cpp  errors.hpp
src/compiler/ir_generator/: ir_generator.cpp  ir_generator.hpp
src/compiler/mir/algorithm/: algorithm.hpp  graph.hpp
src/compiler/mir/algorithm/union_find/: union_find.cpp  union_find.hpp
src/compiler/mir/builder/: builder.cpp  builder.hpp
src/compiler/mir/context/: context.hpp
src/compiler/mir/dependency_graph/: dependency_graph.cpp  dependency_graph.hpp
src/compiler/mir/lifetime/: lifetime.hpp
src/compiler/mir/mir/: mir.hpp
src/compiler/mir/module/: module.cpp  module.hpp
src/compiler/mir/type/: a.out  type.cpp  type.hpp
src/compiler/mir/type_solver/: type_solver.cpp  type_solver.hpp
src/compiler/mir_generator/: mir_generator.hpp
src/compiler/parser/: driver.cpp  driver.hpp  lexer.ll  location.hh  main.cpp  parser.tab.cc  parser.tab.hh  parser.yy  patch.py  scanner.hpp
src/compiler/utils/: scoped_collector.hpp  to_string.cpp  transform_variant_vector.hpp  utils.cpp  utils.hpp  variant_wrapper.hpp
src/compiler/utils/bigint/: bigint.hpp
src/compiler/utils/scope/: scope.cpp  scope.hpp
src/compiler/utils/shared_from_this/: shared_from_this.hpp
src/compiler/utils/unique_number/: unique_number.cpp  unique_number.hpp
src/dev_utils/: format_cpp.py
src/include/algorithm/: algorithm.hpp  graph.hpp
src/include/algorithm/union_find/: union_find.hpp
src/include/ast/: builder.hpp  node.hpp
src/include/blawn/: compiler.hpp
src/include/blawn/converter/ast_to_mir/: converter.hpp
src/include/blawn/module/: module.hpp
src/include/blawn/parser/: driver.hpp  scanner.hpp
src/include/blawn/visitors/: ast_to_mir.hpp  visitor.hpp
src/include/debug/: debug_info.hpp
src/include/mir/: builder.hpp  mir.hpp  module.hpp  type.hpp  type_solver.hpp
src/include/scope/: mangler.hpp  scope.hpp  scoped_collector.hpp
src/include/tools/: cridge.py
src/include/tools/test/: test1.c
src/include/utils/: hash_table.hpp  pattern_match.hpp  scoped_collector.hpp  to_string.hpp  unique_number.hpp  variant_wrapper.hpp  visitor_wrapper.hpp
src/lib/algorithm/: graph.hpp
src/lib/algorithm/union_find/: union_find.cpp
src/lib/ast/: builder.cpp  node.cpp
src/lib/blawn/: compiler.cpp  main.cpp
src/lib/blawn/converter/ast_to_mir/: converter.cpp
src/lib/blawn/module/: module.cpp
src/lib/blawn/parser/: driver.cpp  lexer.ll  parser.yy  patch.py
src/lib/blawn/visitors/: ast_to_mir.cpp
src/lib/debug/: debug_info.cpp
src/lib/mir/: builder.cpp  module.cpp  type.cpp  type_solver.cpp
src/lib/scope/: mangler.cpp  scope.cpp
src/lib/tools/test/: test1.h.gch
src/lib/utils/: scope.cpp  unique_number.cpp
src/tools/test/: parse_header.cpp  test1.h
test/: FizzBuzz.blawn  FizzBuzz.out  class.blawn  class.out  hello_world.out  if_else.blawn  if_else.out  mixture.blawn  mixture.out  new.out  sdl_test.c  test.blawn  test.cpp  test1.blawn  test1.out
tools/: builtins.bridge  cridge.py  formatAll.sh  ir.ll  isTopLevel.sh  test1.bridge
try,study,etc/simple_wc_example-master/: .travis.yml  CMakeLists.txt  Makefile  main.cpp  mc_driver.hpp  mc_lexer.l  mc_parser.yy
try,study,etc/simple_wc_example-master/test/: test0.pl  wordlist.txt  wordlist_out.txt
(+65 files in other folders)
